# manageme

.devcontainer/: devcontainer.json
docker/: Dockerfile  docker-compose.yml
docker/postgresql/dbdata/: postmaster.pid
docker/postgresql/dbdata/base/1/: 2619  2696  2840  2841
docker/postgresql/dbdata/base/16384/: 2619
docker/postgresql/dbdata/base/16385/: 112  113  1247  1247_fsm  1247_vm  1249  1249_fsm  1249_vm  1255  1255_fsm  1255_vm  1259  1259_fsm  1259_vm  13393  13393_fsm  13393_vm  13397  13398  13398_fsm  13402  13403  13403_fsm  13403_vm  13407  13408  13408_fsm  13408_vm  13412  16394  16399  16404  16418  16419  16423  16424  16426  16427  16430  16432  (+248 more)
docker/postgresql/dbdata/base/5/: 2619
docker/postgresql/dbdata/global/: 1260  1262  2671  2672  2676  pg_control  pg_internal.init
docker/postgresql/init/: init.sql
manageme/: pyproject.toml
manageme/config/: settings.py  urls.py
manageme/shue_store/: apps.py  models.py  urls.py
manageme/shue_store/forms/: accountRegisterForm.py  deviceRegisterForm.py
manageme/shue_store/migrations/: 0001_initial.py
manageme/shue_store/views/: deviceView.py  index.py  parentView.py
manageme/templates/shue_store/: base.html  delete_modal.html  device_list.html  index.html  parent_account_list.html
